# enlightenment

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
app/[section]/: page.tsx
app/[section]/[slug]/: page.tsx
app/player/: page.tsx  synth.ts
docs/: 00-charter.md  01-theory-foundations.md  02-research-report.md  03-creative-direction.md  04-publication-style.md  05-generator-design.md  06-research-report-two.md  07-web-player.md
journal/: 2026-06-11-session-01.md  2026-06-11-session-02.md  2026-06-11-session-03.md
lib/: content.ts
scripts/: cuesheet.py  encode.sh  make_descent_spec.py
specs/: arc-v0.json  arc-v0.md  arc-v1-descent.json  arc-v1.json  arc-v1.md
src/enlightenment/: __init__.py  __main__.py  curves.py  layers.py  noise.py  render.py
