[project]
name = "enlightenment-generator"
version = "0.1.0"
description = "Parameterized generator for long-form meditation music programs"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
